# pdf-sign

./: .eslintrc.cjs  .prettierignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  prettier.config.cjs
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: errors.rs  gcloud_signer.rs  lib.rs
